--- a/assignments/ica5/style2.css
+++ b/assignments/ica5/style2.css
@@ -1,86 +1,54 @@
-/* General styles - put these straight into your stylesheet */
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: sans-serif;
+}
 
 body {
-    margin: 2, 2, 2, 2;
-  }
-  
-  html {
-    font-family: 'Helvetica neue', Arial, 'sans serif';
-    font-size: 10px;
-    background-color: #ccc;
-  }
-  
-  /* Selectors to be matched up with rulesets */ 
-  
-  /* Rulesets to be matched up with selectors */
-  
-  .card {
-    width: 35em;
-    height: 22em;
-    margin: 5em auto;
-    background-color: red;
-    border: 0.2em solid black;
-    border-radius: 1.5em;
-  }
-  
-  .card header {
-    background-image: linear-gradient(to bottom,rgba(0,0,0,0.1), rgba(0,0,0,0));
-    border-radius: 1.5em 1.5em 0 0;
-  }
-  
-  .card footer {
-    background-image: linear-gradient(to bottom,rgba(0,0,0,0), rgba(0,0,0,0.1));
-    border-radius: 0 0 1.5em 1.5em;
-  }
-  
-  .card article img {
-    max-height: 100%;
-    float: right;
-  }
-  
-  .card header, .card footer {
-    height: 3em;
-    padding: 1em;
-  }
-  
-  h2, p {
-    margin: 0em;
-  }
-  
-  
-  article {
-    height: 12em;
-    background-color: rgba(0,0,0,0.3);
-  }
-  
-  h2 {
-    font-size: 2em;
-    line-height: 1.5em;
-  }
-  
-  .card footer p {
-   font-size: 1.5em;
-   line-height: 1.5em;
-  }
-  
-  article p {
-    padding: 1em;
-    color: white;
-    line-height: 1.5em;
-  }
-  
-  
-  h1 {
-    background-image: url("logo.png");
-    text-shadow: 4px 4px 4px 4px black;
-    border-radius: 50%;
-  
-  }
-  
-  article {
-    background: 
-      linear-gradient(rgba(0,0,0,.35) 0%, rgba(0,0,0,0) 16%, rgba(0,0,0,0) 84%, rgba(0,0,0,.35)),
-      url(top-image.png) top no-repeat,
-      url(bottom-image.png) bottom no-repeat,
-      white;
-  }
+  margin: 0;
+  background: #ccc;
+}
+
+article {
+  width: 210mm;
+  height: 297mm;
+  margin: 20px auto;
+  position: relative;
+}
+
+address {
+  position: absolute;
+  bottom: 8mm;
+  right: 20mm;
+}
+
+h1 {
+  position: absolute;
+  top: 12mm;
+  left: 20mm;
+  width: 128px;
+  height: 128px;
+  font-size: 20px;
+  letter-spacing: 1px;
+  text-align: center;
+  padding: 44px 0;
+  color: white;
+  text-shadow: 1px 1px 1px black;
+}
+
+/* Your CSS below here */
+h1 {
+  background-image: url(logo.png);
+  filter: drop-shadow(5px 5px 3px black);
+}
+article {
+  background: 
+    linear-gradient(rgba(0,0,0,.35) 0%, rgba(0,0,0,0) 16%, rgba(0,0,0,0) 84%, rgba(0,0,0,.35)),
+    url(top-image.png) top no-repeat,
+    url(bottom-image.png) bottom no-repeat,
+    white;
+    border-top: 1mm solid crimson;
+    border-bottom: 1mm solid crimson;
+}
