--- a/css/styless.css
+++ b/css/styless.css
@@ -1,9 +1,21 @@
 * 
 
+@import url("https://fonts.googleapis.com/css?family=Roboto:700,500");
+
+h2 {
+    letter-spacing: 0;
+    line-height: 5.625rem;
+    margin-bottom:1.625rem;
+    min-height:4rem;
+    text-shadow: 0.313rem 0.75rem 0.25rem #7c91fd40;
+    white-space: nowrap;
+}
+
 body {
+    background-color: white;
     font-family: Arial, Helvetica, sans-serif;
     margin: 5rem;
-    
+
 
 }
 
