--- a/css/styless.css
+++ b/css/styless.css
@@ -11,8 +11,8 @@ h1 {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
-    font-size: 96px;
-    line-height: 90px;
+    font-size: 6rem;
+    line-height: 5.625rem;
     /* or 94% */
     color: #000000;
 }
