--- a/css/styless.css
+++ b/css/styless.css
@@ -5,6 +5,7 @@ body {
     background-color: white;
     font-family: Arial, Helvetica, sans-serif;
     margin: 5rem;
+    font-size: 16px;
 }
 
 h1 {
