--- a/css/styless.css
+++ b/css/styless.css
@@ -5,15 +5,13 @@ body {
     background-color: white;
     font-family: Arial, Helvetica, sans-serif;
     margin: 5rem;
-    font-size: 16px;
 }
 
 h1 {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
-    font-size: 6rem;
-    line-height: 5.625rem;
+    font-size: 3.75em;
     /* or 94% */
     color: #000000;
 }
@@ -22,8 +20,7 @@ h2 {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 600;
-    font-size: 64px;
-    line-height: 90px;
+    font-size: 3em;
     /* or 141% */
     color: #000000;
 }
@@ -32,8 +29,8 @@ h3 {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 200;
-    font-size: 48px;
-    line-height: 90px;
+    font-size: 2.25em;
+    
     /* or 188% */
     color: #000000;
 }
@@ -42,8 +39,7 @@ h4 {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 100;
-    font-size: 40px;
-    line-height: 90px;
+    font-size: 1.5em;
     /* or 225% */
     color: #000000;
 }
@@ -52,10 +48,12 @@ p {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    font-size: 32px;
-    line-height: 90px;
+    font-size: 0,875em;
     /* or 281% */
     color: #000000;
 }
 
+a {
+    color: #860B0B;
+}
 
