--- a/css/styless.css
+++ b/css/styless.css
@@ -3,7 +3,6 @@
 
 body {
     background-color: white;
-    font-family: Arial, Helvetica, sans-serif;
     margin: 5rem;
 }
 
@@ -53,7 +52,24 @@ p {
     color: #000000;
 }
 
-a {
+/* unvisited link */
+a:link {
     color: #860B0B;
-}
+  }
+  
+  /* visited link */
+  a:visited {
+    text-decoration-line: underline;
+    color: #B3B3B3;
+  }
+  
+  /* mouse over link */
+  a:hover {
+    color: #B3B3B3;
+  }
+  
+  /* selected link */
+  a:active {
+    color: #F3D9D9;
+  }
 
