--- a/css/styless.css
+++ b/css/styless.css
@@ -6,6 +6,7 @@ body {
     margin: 5rem;
 }
 
+/* grid layout for image and lists */
 .grid {
     margin: 0 auto;
     padding: 0 20px;
@@ -13,8 +14,16 @@ body {
     display: grid;
     grid-template-columns: 1fr 3fr;
     gap:20px;
-    float: left;
+   
   }
+
+  .feature {
+    float: left;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+
+
 
 h1 {
     font-family: 'Arial';
