--- a/css/styless.css
+++ b/css/styless.css
@@ -10,7 +10,7 @@
     padding: 0 20px;
     max-width: 980px;
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap:20px;
    
   }
@@ -151,9 +151,9 @@ ul, ol {
         max-width: 980px;
 */
 
-@media (max-width:600px) {
+@media (max-width:820px) {
 .grid-container {
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 2fr;
     gap:20px;
     }
 img {
@@ -167,5 +167,31 @@ img {
 body{
 color: blue;
     }
+
+.grid-container {
+    grid-template-columns: 1fr;
+    gap:20px;
+    }
+    
+img {
+    height:auto;
+    width: auto;
+    }
 }
+
+@media (max-width: 380px) { 
+    body{
+    color: blue;
+        }
+    
+    .grid-container {
+        grid-template-columns: 1fr;
+        gap:20px;
+        }
+        
+    img {
+        height:auto;
+        width: auto;
+        }
+    }
 
