--- a/css/styless.css
+++ b/css/styless.css
@@ -15,6 +15,11 @@
    
   }
 
+.responsive {
+    max-width: 100%;
+    height: auto;
+  }
+
 /*
 #feature {
     float: left;
@@ -151,17 +156,18 @@ ul, ol {
         max-width: 980px;
 */
 
-@media (max-width:820px) {
+@media (max-width:1000px) {
 .grid-container {
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 1fr;
     gap:20px;
     }
-img {
-    height:auto;
-    width: auto;
+
+.grid-item {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
 }
 
-}
 
 @media (max-width: 600px) { 
 body{
@@ -172,16 +178,12 @@ color: blue;
     grid-template-columns: 1fr;
     gap:20px;
     }
-    
-img {
-    height:auto;
-    width: auto;
-    }
+
 }
 
 @media (max-width: 380px) { 
     body{
-    color: blue;
+    color: red;
         }
     
     .grid-container {
@@ -189,9 +191,5 @@ img {
         gap:20px;
         }
         
-    img {
-        height:auto;
-        width: auto;
-        }
     }
 
