--- a/css/styless.css
+++ b/css/styless.css
@@ -185,6 +185,31 @@ color: blue;
         grid-template-columns: 1fr;
         gap:20px;
         }
+
+    h1 {
+        text-align: center
+    }
+    
+    h2 {
+        text-align: center
+    }
+    
+    h3 {
+        text-align: center
+    }
+    
+    h4 {
+        text-align: center
+    }
+    
+    h5 {
+        text-align: center
+    }
+    
+    p {
+        text-align: center
+    }
+    
         
     }
 
