--- a/css/styless.css
+++ b/css/styless.css
@@ -10,10 +10,19 @@
     padding: 0 10px;
     max-width: 980px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 20px;
    
   }
+
+.container_2 {
+    margin: 0 auto;
+    padding: 0 10px;
+    max-width: 980px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
 
 .responsive {
     max-width: 100%;
