--- a/css/styless.css
+++ b/css/styless.css
@@ -201,27 +201,34 @@ color: blue;
         }
 
     h1 {
-        text-align: center
+        text-align: center;
+        font-weight: 700;
+        font-size: 3.25em;
     }
     
     h2 {
-        text-align: center
+        text-align: center;
+        font-weight: 600;
+        font-size: 2.50em;
     }
     
     h3 {
-        text-align: center
+        text-align: center;
+        font-weight: 400;
+        font-size: 1.75em;
+    
     }
     
     h4 {
-        text-align: center
+        text-align: center;
     }
     
     h5 {
-        text-align: center
+        text-align: center;
     }
     
     p {
-        text-align: center
+        text-align: center;
     }
     
         
