--- a/css/styless.css
+++ b/css/styless.css
@@ -175,8 +175,14 @@ ul, ol {
     grid-template-columns: 1fr;
     grid-template-rows: 2fr;
 }
-}
 
+}
+@media (max-width:830px) {
+    .container_2{
+        grid-template-columns: 1fr;
+
+    }
+}
 
 @media (max-width: 620px) { 
 body{
