--- a/css/styless.css
+++ b/css/styless.css
@@ -1,9 +1,34 @@
   body {
     background-color: white;
-    margin: 5rem;
+    margin: 4rem;
 }
 
 /* grid layout for image and lists */
+
+.content {
+    margin: 5rem;
+}
+
+nav {
+    background-color: #000;
+    padding: .5em;
+    position: sticky; 
+    top:0;
+  }
+  
+  nav ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+  }
+  
+  nav a {
+    color: #fff;
+    text-decoration: none;
+    padding: .5em 1em;
+  }
 
 .grid-container {
     margin: 0 auto;
