--- a/css/styless.css
+++ b/css/styless.css
@@ -16,7 +16,6 @@
     margin: 0 auto;
     padding: 0 20px;
     max-width: 980px;
-
   }
 
 nav {
@@ -38,6 +37,10 @@ nav {
     color: #fff;
     text-decoration: none;
     padding: .5em 1em;
+  }
+
+  nav a:hover, nav a:active {
+    background-color: #860B0B;
   }
 
 .grid-container {
