thin to lighter/ confined to pcdp trailer
to show vikki

--- a/css/styless.css
+++ b/css/styless.css
@@ -132,7 +132,7 @@ h6 {
     font-style: normal;
     font-weight: 400;
     font-size: 1.05em;
-    font-weight: thin;
+    font-weight: lighter;
     /* or 225% */
     color: #860B0B;
 }
