--- a/css/styless.css
+++ b/css/styless.css
@@ -320,10 +320,18 @@ ul, ol {
         .grid-container {
             grid-template-columns: 1fr;
             gap:20px;
+            place-items: center;
             }
 
         .container_3 {
             grid-template-columns: 1fr;
+            place-items: center;
+        }
+
+        .container_4 {
+            grid-template-columns: 1fr;
+            place-items: center;
+
         }
 
         .bottom {
