about photos bg color

--- a/css/styless.css
+++ b/css/styless.css
@@ -149,7 +149,7 @@ audio {
 }
 
 .about_photo {
-    background-color: #B3B3B3;
+    background-color: #D9D9D9;
     border-style: inset;
     border-radius: 20px;
 }
