--- a/assignments/wa13(EC)/wa13css.css
+++ b/assignments/wa13(EC)/wa13css.css
@@ -4,6 +4,8 @@ body {
     font-family: Avenir,Open Sans,Helvetica,sans-serif;
     color: #1e1e1e;
     background-color: #fff;
+    overflow: auto;
+    padding-bottom: 0%;
 }
 
 
@@ -28,6 +30,7 @@ body {
     right: 0;
     min-width: 600px;
     box-sizing: border-box;
+    max-height: fit-content;
 }
 
 
@@ -43,6 +46,7 @@ h2 {
 
 #news {
     box-sizing: border-box;
+
 }
 
 @media screen and (max-width: 1000px) {
@@ -68,6 +72,22 @@ h2 {
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
 }
+}
+
+@media screen and (max-height:400px) and (max-width:700px) {
+    .left {
+        position: fixed;
+        left: 120px;
+    }
+
+    .card {
+        position: relative;
+        padding-left:235px;
+    }
+    h2, #shortBio {
+        text-align: center;
+    }
+
 }
 
 
