--- a/assignments/wa13(EC)/wa13css.css
+++ b/assignments/wa13(EC)/wa13css.css
@@ -18,6 +18,7 @@ body {
     transform: translateY(-50%);
     width: 210px;
     box-sizing: border-box;
+    display: block;
     
 }
 
@@ -31,6 +32,8 @@ body {
     min-width: 600px;
     box-sizing: border-box;
     max-height: fit-content;
+    
+    display: block;
 }
 
 
