--- a/css/styless.css
+++ b/css/styless.css
@@ -303,6 +303,13 @@ p.story {
     background-color: #B3B3B3;
 }
 
+/*code to style assignment 11 */
+
+.controls {
+    background-color: #860B0B;
+}
+
+
 /*------------------------ 
  margin: 0 auto;
         padding: 0 20px;
@@ -389,8 +396,104 @@ p.story {
             text-align: center;
             font-size: .80rem;
         }
-        
+}
 
+/* ART GENERATOR */
+
+.wrapper {
+    background-color: #B3B3B3;
+    width: 80vmin;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    padding: 40px 20px;
+    border-radius: 8px;
+}
+
+.container {
+    background-color: white;
+}
+
+.range-labels {
+    display: block;   
+}
+
+span {
+    position: relative;
+    font-size: 22px;
+    bottom: -1px;
+}
+
+.opt-wrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    gap: 10px;
+}
+
+button {
+    background-color: #860B0B;
+    border-radius: 15px;
+    font-family: 'Arial';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 0.875rem;
+    line-height: 20px;
+    padding: 15px 15px 15px 15px;
+/* or 562% */
+
+    align-items: center;
+    text-align: center;
+
+    color: #FFFFFF;
+    text-decoration: none;
+    transition-duration: 0.4s;
+}
+
+button:hover {
+    background-color: #F3D9D9;
+    color: #860B0B;
+    text-decoration: none;
+}
+
+button:visited {
+    background-color: #F3D9D9;
+    color: #860B0B;
+    text-decoration: underline;
 }
 
 
+/* color swatch button */
+input[type="color"] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-color: transparent;
+    width: 70px;
+    height: 40px;
+    border: none;
+    cursor: pointer;
+}
+
+input[type="color"]::-webkit-color-swatch {
+    border-radius: 8px;
+    border: 4px solid #000000;
+}
+
+label{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#width-value {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.gridCol {
+    height: 1em;
+    width: 1em;
+    border: 1px solid #ddd;
+}
+.gridRow {
+    display: flex;
+}
