--- a/css/styless.css
+++ b/css/styless.css
@@ -65,7 +65,7 @@ a {
   
   /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
   @media screen and (max-width: 740px) {
-    .topnav.responsive {position: relative;}
+    /* this makes the navbar stay in one place -> .topnav.responsive {position: initial;} */
     .topnav.responsive a.icon {
       position: absolute;
       right: 0;
