--- a/css/styless.css
+++ b/css/styless.css
@@ -7,6 +7,10 @@ html {
     margin-bottom: 25px;
 }
 
+.art-grid {
+    align-items: center;
+}
+
 /*NEW NAV*/
 
 a {
@@ -82,43 +86,6 @@ a {
 
 /* grid layout for image and lists */
 
-.logo {
-    font-size: 200%;
-    margin: 0 auto;
-    color: #F3D9D9; 
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    padding-left: 20px;
-    
-  }
-
-nav {
-    background-color: #000;
-    padding: .5em;
-    position: sticky; 
-    top:0;
-    height: 40px;
-    z-index: 1;
-  }
-  
-  nav ul {
-    margin: 0;
-    padding: 10px 20px 20px 20px;
-    list-style: none;
-    display: flex;
-    justify-content: space-evenly;
-    float:right;
-  }
-  
-  nav a {
-    color: #fff;
-    text-decoration: none;
-    padding: .5em 1em;
-  }
-
-  nav a:hover, nav a:active {
-    background-color: #860B0B;
-    border-radius: 20px;
-  }
 
 .grid {
     margin: 0 auto;
@@ -499,27 +466,23 @@ p.story {
     margin: 0 auto;
     padding: 0 20px;
     max-width: 980px;
+    text-align: center;
   }
 
-.art-grid-container {
-    margin: 0 auto;
-    padding: 0 10px;
-    max-width: 980px;
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 20px;
-   
-  }
 
 .wrapper {
     background-color: #B3B3B3;
     width: 80vmin;
-    position: absolute;
-    /* transform: translate(-50%, -50%);*/
+    /* position: absolute;
+    transform: translate(-50%, -50%);
     top: 60%;
-    left: 30%;
+    left: 30%;*/
     padding: 40px 20px;
     border-radius: 8px;
+    align-content: center;
+    margin-left: auto;
+    margin-right: auto;
+
 }
 
 .container {
