--- a/css/styless.css
+++ b/css/styless.css
@@ -563,7 +563,7 @@ label{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#height3-value {
+#height-value {
     font-family: Arial, Helvetica, sans-serif;
 }
 
