--- a/art_generator/mysite.css
+++ b/art_generator/mysite.css
@@ -1,3 +1,4 @@
+/* ORIGINAL CODE Still includes original navbar */
 html {
     margin:0;
 }
@@ -25,13 +26,14 @@ a {
   
   /* Style the links inside the navigation bar */
   .topnav a {
-    float: left;
-    display: block;
+    float: left; 
+    display: block; 
     color: #fff;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 16px; 
     text-decoration: none;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
   }
   
   /* Change the color of links on hover */
@@ -54,8 +56,8 @@ a {
   }
 
 /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
+@media screen and (max-width: 740px) {
+    .topnav a:not(.active) {display: none;}
     .topnav a.icon {
       float: right;
       display: block;
@@ -63,8 +65,8 @@ a {
   }
   
   /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
+  @media screen and (max-width: 740px) {
+    /* this makes the navbar stay in one place -> .topnav.responsive {position: initial;} */
     .topnav.responsive a.icon {
       position: absolute;
       right: 0;
@@ -611,4 +613,3 @@ label{
 .gridRow {
     display: flex;
 }
-
