removed red mobile text

--- a/css/styless.css
+++ b/css/styless.css
@@ -388,9 +388,11 @@ p.story {
 }
 
 @media (max-width: 620px) { 
+    /* query checker - 
     body{
         color: red;
             }
+        */
     
         
         .grid-container {
